# basesqlmodel

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: latest-changes.yml  lint.yml  test.yml
basesqlmodel/: __init__.py  main.py
tests/: conftest.py  test_main.py  test_version.py  utils.py
