[tool.poetry]
name = "basesqlmodel"
version = "0.1.1"
description = "A very simple CRUD class for SQLModel! :sparkles:"
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kludex/basesqlmodel"
include = ["basesqlmodel/py.typed"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8.1"
sqlmodel = "^0.0.8"
fastapi = "^0.95.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.2"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
mypy = "^1.1.1"
aiosqlite = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
